rtest/tests/jsr335/Semantics/MethodReferenceAnalysis/TypeMethodReference/ShouldCompile/syntax07/Test.java
// .result=COMPILE_PASS

public class Test {
	
	interface A { 
		int method(B b, int i, String s); 
	}
	
	interface B {
		int method(int i, String s);
	}
	
	public void testMethod() {
		A a = B::method;
	}
}